[package]
name = "serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
tokio = { version = "1.26.0", features = ["full"] }
vercel_runtime = "0.3.4"


[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "basic"
path = "api/basic.rs"

